[package]
name = "https_proxy"
version = "0.1.0"
edition = "2021"
description = "Stealth HTTPS forward proxy with automatic Let's Encrypt TLS and nginx camouflage"
license = "MIT"
repository = "https://github.com/madeye/https_proxy"
keywords = ["proxy", "https", "tls", "acme", "stealth"]
categories = ["network-programming", "command-line-utilities"]

[lib]
name = "https_proxy"
path = "src/lib.rs"

[[bin]]
name = "https-proxy"
path = "src/main.rs"

[dependencies]
anyhow = "1"
futures = "0.3"
base64 = "0.22"
clap = { version = "4", features = ["derive"] }
http-body-util = "0.1"
hyper = { version = "1", features = ["http1", "http2", "server", "client"] }
hyper-util = { version = "0.1", features = ["tokio", "http1", "http2", "server-auto", "client-legacy"] }
libc = "0.2"
serde = { version = "1", features = ["derive"] }
socket2 = { version = "0.5", features = ["all"] }
serde_yaml = "0.9"
tokio = { version = "1", features = ["full"] }
tokio-rustls = "0.26"
tokio-rustls-acme = { version = "0.9", features = ["axum"] }
crossterm = "0.28"
ratatui = "0.29"
tracing = "0.1"
tokio-util = { version = "0.7", features = ["rt"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
base64 = "0.22"
rcgen = "0.14"
reqwest = { version = "0.12", features = ["rustls-tls", "json"], default-features = false }
serde_json = "1"
tempfile = "3"

[profile.release]
strip = true
lto = true
